@@ -40,6 +40,7 @@ evans
   b - prevent TORQUE from losing connectivity with Moab when starting jobs asynchronously
       TRQ-918
   b - prevent the API from segfaulting when passed a negative socket descriptor
+  b - don't allow pbs_tcp_timeout to ever be less than 5 minutes - may be temporary
 
 4.0.1
   b - Fix trqauthd init scripts to use correct path to trqauthd.
